backend: add item filter by tag_id
