# docs/api.swagger.yaml
@@ -310,6 +310,11 @@ paths:
         required: false
         schema:
           type: string
+      - name: tag_id_eq
+        in: query
+        required: false
+        schema:
+          type: string
       responses:
         200:
           description: Success
